style: :dizzy: Added CSS styling to all rendered components, aded an animated button that switches the side of teh card to display different info.
Added CSS styling to every component rendered on screen, made less important text grey, more important text bold with black/white text (depends on which side of teh card). Added a "Contact Info"
button that shows the other side of the user card and displays the user's contact info, collected from the API.

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,18 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+
+:root {
+    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    line-height: 1.5;
+    
+    --background: linear-gradient(270deg, #2fbfeb, #2895f5);
+    background:hsla(180, 5%, 8%, 0.863);
+    
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+
+    margin :0;
+    padding: 0;
+    height: 100hv;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+  }
